Fixed squished images in card viewer

--- a/css/card.css
+++ b/css/card.css
@@ -144,7 +144,7 @@
 }
 
 .cardViewer img {
-    width: fit-content;
+    /* width: fit-content; */
     height: fit-content;
     max-width: 100%;
     max-height: 70vh;
